markdown expample and some doc

--- a/example/markdown/index.html
+++ b/example/markdown/index.html
@@ -5,6 +5,7 @@
     <title>Markdown Editor</title>
 </head>
 <body>
+    <script src="../../node_modules/showdown/src/showdown.js"></script>
     <script src="../dist/share.js"></script>
     <script src="../dist/markdown-bundle.js"></script>
 </body>
